--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <!-- pure horizontal menu -->
     <div class="custom-menu-wrapper">
         <div class="pure-menu custom-menu custom-menu-top">
-            <a href="index.html" class="pure-menu-heading custom-menu-brand"><img class="fip-navbar" src="images/wmms.svg"></a>
+            <a href="index.html" class="pure-menu-heading custom-menu-brand">
+                <span class="fip-navbar"></span>
+            </a>
             <a href="#" class="custom-menu-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
         </div>
         <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
@@ -43,7 +45,7 @@
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer"> Contact</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Start today <span class="icon-play"></span></a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>
             </ul>
         </div>
     </div>
@@ -111,7 +113,7 @@
         </div>
 
         <div class="pure-u-1 pure-u-md-1-3">
-            <a class="card" href="#!" target="_blank">
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appWatson">
                 <div class="card-image img-9" style="background-image:url('http://i.ytimg.com/vi/ymUFadN_MO4/hqdefault.jpg')"></div>
                 <div class="card-info">
                     <div class="card-title">Watson</div>
@@ -121,7 +123,7 @@
         </div>
 
         <div class="pure-u-1 pure-u-md-1-3">
-            <a class="card" href="#!" target="_blank">
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appMarvel">
                 <div class="card-image img-9" style="background-image:url('https://marvelapp.com/static/site/images/homepage/collaboration@2x.jpg')"></div>
                 <div class="card-info">
                     <div class="card-title">Marvel app</div>
@@ -131,7 +133,7 @@
         </div>
 
         <div class="pure-u-1 pure-u-md-1-3">
-            <a class="card" href="#!" target="_blank">
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appPrezi">
                 <div class="card-image img-7" style="background-image:url('https://d2pj2twnjx3fya.cloudfront.net/staticpages/1078-925813cabed9e2f4070e9dc87c1f391433a83cfc/campaigns/img/sem-1/devices.jpg')"></div>
                 <div class="card-info">
                     <div class="card-title">Prezi</div>
@@ -143,9 +145,9 @@
     </div>
 
     <!-- footer -->
-    <div class="pure-g" style="padding:3em 3em;background-color:#555;color:#fff;">
+    <div class="pure-g section-footer">
         <div class="pure-u-1 text-center">
-            © 2016 Designed by the Global Affairs (SIAI Division) in Gatineau, Quebec. Made by <a class="baby-blue" href="http://loogart.com" target="_blank">Chris Soueidan</a>
+            © 2016 Made with <span class="footer-strikethrough">love</span> a keyboard by <a class="baby-blue" href="http://loogart.com" target="_blank">Chris Soueidan</a> of Global Affairs Canada (SIAI).
         </div>
     </div>
 
@@ -180,6 +182,26 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Sounds good.</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal App Watson -->
+    <div class="modal fade" id="appWatson" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-app-card" role="document">
+            <div class="modal-content">
+                <div class="card-image img-9" style="background-image:url('http://i.ytimg.com/vi/ymUFadN_MO4/hqdefault.jpg')"></div>
+                <div class="modal-body">
+                    <h3>IBM Watson</h3>
+                    <h6>What is it and how can it help you?</h6>
+                    <p>IBM Watson is a technology platform that uses natural language processing and machine learning to reveal insights from large amounts of unstructured data</p>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                    <p>Give it a try, see how far you can elevate your ideas!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="pure-button" href="#!">Access app</button>
                 </div>
             </div>
         </div>
