--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div class="pure-u-1 pure-u-md-1-3">
             <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appWatson">
-                <div class="card-image img-9" style="background-image:url('http://i.ytimg.com/vi/ymUFadN_MO4/hqdefault.jpg')"></div>
+                <div class="card-image img-watson"></div>
                 <div class="card-info">
                     <div class="card-title">Watson</div>
                     <div class="card-artist">Big Data Analytics</div>
@@ -124,7 +124,7 @@
 
         <div class="pure-u-1 pure-u-md-1-3">
             <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appMarvel">
-                <div class="card-image img-9" style="background-image:url('https://marvelapp.com/static/site/images/homepage/collaboration@2x.jpg')"></div>
+                <div class="card-image img-marvel"></div>
                 <div class="card-info">
                     <div class="card-title">Marvel app</div>
                     <div class="card-artist">Protoyping and Mockups</div>
@@ -134,7 +134,7 @@
 
         <div class="pure-u-1 pure-u-md-1-3">
             <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appPrezi">
-                <div class="card-image img-7" style="background-image:url('https://d2pj2twnjx3fya.cloudfront.net/staticpages/1078-925813cabed9e2f4070e9dc87c1f391433a83cfc/campaigns/img/sem-1/devices.jpg')"></div>
+                <div class="card-image img-prezi"></div>
                 <div class="card-info">
                     <div class="card-title">Prezi</div>
                     <div class="card-artist">Awesome Presentations</div>
@@ -191,13 +191,55 @@
     <div class="modal fade" id="appWatson" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog modal-app-card" role="document">
             <div class="modal-content">
-                <div class="card-image img-9" style="background-image:url('http://i.ytimg.com/vi/ymUFadN_MO4/hqdefault.jpg')"></div>
+                <div class="card-image img-watson-2"></div>
                 <div class="modal-body">
                     <h3>IBM Watson</h3>
                     <h6>What is it and how can it help you?</h6>
                     <p>IBM Watson is a technology platform that uses natural language processing and machine learning to reveal insights from large amounts of unstructured data</p>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
                     <p>Give it a try, see how far you can elevate your ideas!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="pure-button" href="#!">Access app</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal App Marvel -->
+    <div class="modal fade" id="appMarvel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-app-card" role="document">
+            <div class="modal-content">
+                <div class="card-image img-marvel-2"></div>
+                <div class="modal-body">
+                    <h3>Marvel App</h3>
+                    <h6>What is it and how can it help you?</h6>
+                    <p>Simple design, prototyping and collaboration</p>
+                    <p>Create screens directly in Marvel or add your images from Sketch or Photoshop. You can even sync designs from your cloud storage! Our simple editor allows you to link all your designs together in a jiffy, then add gestures and transitions to make your prototype feel just like a real app or website.</p>
+                    <p>Give it a try, you will be able to prototype your ideas quickly!</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="https://marvelapp.com/support/" target="_blank">app's support page</a>.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="pure-button" href="#!">Access app</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Modal App Prezi -->
+    <div class="modal fade" id="appPrezi" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-app-card" role="document">
+            <div class="modal-content">
+                <div class="card-image img-prezi-2"></div>
+                <div class="modal-body">
+                    <h3>Prezi</h3>
+                    <h6>What is it and how can it help you?</h6>
+                    <p>The presentation software for when it matters.</p>
+                    <p>Unlike static slides, Prezi combines motion, zoom, and spatial relationships to engage your audience and help them remember your message. 60Millionalready present better with Prezi.</p>
+                    <p>Give it a try, see how you will wow your next audience!</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="https://marvelapp.com/support/" target="_blank">app's support page</a>.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
