updated navbar transparency, fonts and j1 padding

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <link rel="stylesheet" href="pure.css">
     <link rel="stylesheet" href="grids-responsive.css">
     <link rel="stylesheet" href="style.css">
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,800,400italic' rel='stylesheet' type='text/css'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,800,400italic' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css" class="fontstack-asset">
+    <style>
 
+    </style>
 </head>
 
 <body>
@@ -51,11 +54,11 @@
     </div>
 
     <!-- jumbotron -->
-    <div class="j1 img-j1" data-stellar-background-ratio="0.5">
+    <div class="j1 img-j1" data-stellar-background-ratio="0.8">
         <div class="text-block-1">
             <h3 class="baby-blue">Innolab</h3>
             <h1>Explore. Build. Publish.</h1>
-            <p>Hello from the Global Affairs Canada InnoLAB! We are a dedicated (<span class="baby-blue">small</span>) team in the Global Affairs Information Management and Information Management Bureau, who have created the InnoLAB to help you foster digitally focused - innovative solutions that change the way our department works.</p>
+            <p class="white">Hello from the Global Affairs Canada InnoLAB! We are a dedicated (<span class="baby-blue">small</span>) team in the Global Affairs Information Management and Information Management Bureau, who have created the InnoLAB to help you foster digitally focused - innovative solutions that change the way our department works.</p>
             <a class="pure-button pure-button-blue button-xlarge" style="">Get started</a>
         </div>
     </div>
@@ -227,7 +230,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- Modal App Prezi -->
     <div class="modal fade" id="appPrezi" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog modal-app-card" role="document">
