--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item active"><a href="#" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link">How it works</a></li>
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Global Hub</a></li>
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer"> Contact</a></li>
+                <li class="pure-menu-item"><a class="pure-menu-link toggle-drawer">Contact</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>
             </ul>
         </div>
     </div>
+
 
     <!-- jumbotron -->
     <div class="j1 img-j1" data-stellar-background-ratio="0.8">
@@ -65,6 +65,7 @@
 
     <!-- section 1: 3 pillars-->
     <div class="pure-g">
+       
         <div class="pure-u-1 pure-u-sm-1 pure-u-md-1-2">
             <div class="album-art img-explore">
                 <h4 class="album-image-title">Explore</h4>
