created toolkit page and updated minor css elements

--- a/toolkit.html
+++ b/toolkit.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>InnoLAB 2.0</title>
+    <title>InnoLAB 2.0 Toolkit</title>
 
     <link rel="stylesheet" href="pure.css">
     <link rel="stylesheet" href="grids-responsive.css">
@@ -42,9 +42,9 @@
         <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
             <div class="custom-menu-screen"></div>
             <ul class="pure-menu-list">
-                <li class="pure-menu-item active"><a href="index.html" class="pure-menu-link">Home</a></li>
+                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link">How it works</a></li>
-                <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Toolkit</a></li>
+                <li class="pure-menu-item active"><a href="toolkit.html" class="pure-menu-link">Toolkit</a></li>
                 <li class="pure-menu-item"><a class="pure-menu-link toggle-drawer">Contact</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
@@ -53,71 +53,15 @@
         </div>
     </div>
 
-
-    <!-- jumbotron -->
-    <div class="j1 img-j1" data-stellar-background-ratio="0.8">
-        <div class="text-block-1">
-            <h3 class="baby-blue">Innolab</h3>
-            <h1>Explore. Build. Publish.</h1>
-            <p class="white">Hello from the Global Affairs Canada InnoLAB! We are a dedicated (<span class="baby-blue">small</span>) team in the Global Affairs Information Management and Information Management Bureau, who have created the InnoLAB to help you foster digitally focused - innovative solutions that change the way our department works.</p>
-            <a href="toolkit.html" class="pure-button pure-button-blue button-xlarge" style="">Get started</a>
-        </div>
-    </div>
-
-    <!-- section 1: 3 pillars-->
-    <div class="pure-g">
-
-        <div class="pure-u-1 pure-u-sm-1 pure-u-md-1-2">
-            <div class="album-art img-explore">
-                <h4 class="album-image-title">Explore</h4>
-                <div class="album-gradient"></div>
-                <div class="album-info">
-                    <a href="#!" class="btn btn-white-o pull-right"></a>
-                    <div class="album-title">
-                        <h1>Explore</h1></div>
-                    <h2 class="album-artist">Have an innovative idea? <br> Start exploring by using our Toolkit.</h2>
-                    <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#explore">About Exploring</a>
-                </div>
-            </div>
-        </div>
-        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4">
-            <div class="album-art img-build">
-                <h4 class="album-image-title">Build</h4>
-                <div class="album-gradient"></div>
-                <div class="album-info">
-                    <a href="#!" class="btn btn-white-o pull-right"></a>
-                    <div class="album-title">
-                        <h1>Build</h1></div>
-                    <h2 class="album-artist">Want to prototype that innovative idea? <br>Maybe we can help!</h2>
-                    <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#comingSoon">About Building</a>
-                </div>
-            </div>
-        </div>
-        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4">
-            <div class="album-art img-publish">
-                <h4 class="album-image-title">Publish</h4>
-                <div class="album-gradient"></div>
-                <div class="album-info">
-                    <div class="album-title">
-                        <h1>Publish</h1></div>
-                    <h2 class="album-artist">Think your prototype is department worthy?<br>Let’s publish it.</h2>
-                    <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#comingSoon">About Publishing</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- section 2: Explain apps-->
-    <div class="pure-g section-2">
-
+    <!-- section 3: Toolkit-->
+    <div class="pure-g section-3">
         <div class="pure-u-1 text-block-1">
-            <h4>Let your ideas flow.</h4>
-            <p>At the InnoLAB, we truly believe that every idea is worthwhile exploring. That is why we have currated a toolkit that will quickly enable you develop your ideas.</p>
-            <a href="toolkit.html" class="button-simple-link">View all apps</a>
+            <h4>Your innovation toolkit</h4>
+            <p>A currated collection of innovative applications that will help and guide you in your next forward thinking project.</p>
+            <hr style="width:240px">
         </div>
 
-        <div class="pure-u-1 pure-u-md-1-3">
+        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
             <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appWatson">
                 <div class="card-image img-watson"></div>
                 <div class="card-info">
@@ -127,7 +71,7 @@
             </a>
         </div>
 
-        <div class="pure-u-1 pure-u-md-1-3">
+        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
             <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appMarvel">
                 <div class="card-image img-marvel"></div>
                 <div class="card-info">
@@ -137,7 +81,7 @@
             </a>
         </div>
 
-        <div class="pure-u-1 pure-u-md-1-3">
+        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
             <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appPrezi">
                 <div class="card-image img-prezi"></div>
                 <div class="card-info">
@@ -146,6 +90,37 @@
                 </div>
             </a>
         </div>
+        
+        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appWatson">
+                <div class="card-image img-watson"></div>
+                <div class="card-info">
+                    <div class="card-title">Watson</div>
+                    <div class="card-artist">Big Data Analytics</div>
+                </div>
+            </a>
+        </div>
+
+        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appMarvel">
+                <div class="card-image img-marvel"></div>
+                <div class="card-info">
+                    <div class="card-title">Marvel</div>
+                    <div class="card-artist">Protoyping and Mockups</div>
+                </div>
+            </a>
+        </div>
+
+        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appPrezi">
+                <div class="card-image img-prezi"></div>
+                <div class="card-info">
+                    <div class="card-title">Prezi</div>
+                    <div class="card-artist">Awesome Presentations</div>
+                </div>
+            </a>
+        </div>
+        
 
     </div>
 
@@ -153,27 +128,6 @@
     <div class="pure-g section-footer">
         <div class="pure-u-1 text-center">
             © 2016 Made with <span class="footer-strikethrough">love</span> a keyboard by <a class="baby-blue" href="http://loogart.com" target="_blank">Chris Soueidan</a> of Global Affairs Canada (SIAI).
-        </div>
-    </div>
-
-    <!-- Modal Explore -->
-    <div class="modal fade" id="explore" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-black-card" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Explore</h4>
-                </div>
-                <div class="img-explore j1" style="height:350px"></div>
-                <div class="modal-body">
-                    <h5>You can create freely.</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-                    <p>Give it a try, see how far you can elevate your ideas!</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="pure-button pure-button-primary">Explore now</button>
-                </div>
-            </div>
         </div>
     </div>
 
