--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@
                 <li class="pure-menu-item"><a class="pure-menu-link toggle-drawer">Contact</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">FR</a></li>
+                <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
             </ul>
         </div>
     </div>
+    
+        <!-- jumbotron -->
+        <div class="j1 img-j1" data-stellar-background-ratio="0.8" style="background-image:url('./images/phone1.jpg')">
+            <div class="text-block-1">
+                <h3 class="baby-blue">Innolab</h3>
+                <h1>Explore. Build. Publish.</h1>
+                <p class="white">Hello from the Global Affairs Canada InnoLAB! We are a dedicated (<span class="baby-blue">small</span>) team in the Global Affairs Information Management and Information Management Bureau, who have created the InnoLAB to help you foster digitally focused - innovative solutions that change the way our department works.</p>
+                <a href="toolkit.html" class="pure-button pure-button-blue button-xlarge" style="">Get started</a>
+            </div>
+</div>
 
-
-    <!-- jumbotron -->
-    <div class="j1 img-j1" data-stellar-background-ratio="0.8">
-        <div class="text-block-1">
-            <h3 class="baby-blue">Innolab</h3>
-            <h1>Explore. Build. Publish.</h1>
-            <p class="white">Hello from the Global Affairs Canada InnoLAB! We are a dedicated (<span class="baby-blue">small</span>) team in the Global Affairs Information Management and Information Management Bureau, who have created the InnoLAB to help you foster digitally focused - innovative solutions that change the way our department works.</p>
-            <a href="toolkit.html" class="pure-button pure-button-blue button-xlarge" style="">Get started</a>
-        </div>
-    </div>
-
-    <!-- section 1: 3 pillars-->
-    <div class="pure-g">
+        <!-- section 1: 3 pillars-->
+        <div class="pure-g">
 
         <div class="pure-u-1 pure-u-sm-1 pure-u-md-1-2">
             <div class="album-art img-explore">
@@ -106,8 +106,7 @@
             </div>
         </div>
     </div>
-
-
+    
     <!-- section 2: Explain apps-->
     <div class="pure-g section-2">
 
@@ -171,7 +170,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="pure-button pure-button-primary">Explore now</button>
+                    <button onclick="window.location.href='/toolkit.html'" type="button" class="pure-button pure-button-primary">Explore now</button>
                 </div>
             </div>
         </div>
@@ -203,6 +202,7 @@
                     <p>IBM Watson is a technology platform that uses natural language processing and machine learning to reveal insights from large amounts of unstructured data</p>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
                     <p>Give it a try, see how far you can elevate your ideas!</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="http://www.ibm.com/support/en-us/?lnk=mmi" target="_blank">app's support page</a>.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
@@ -244,7 +244,7 @@
                     <p>The presentation software for when it matters.</p>
                     <p>Unlike static slides, Prezi combines motion, zoom, and spatial relationships to engage your audience and help them remember your message. 60Millionalready present better with Prezi.</p>
                     <p>Give it a try, see how you will wow your next audience!</p>
-                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="https://marvelapp.com/support/" target="_blank">app's support page</a>.</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="https://prezi.com/support/" target="_blank">app's support page</a>.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
@@ -291,7 +291,7 @@
         //parallax effect
         $(window).stellar({
             horizontalScrolling: false,
-            responsive: true
+            responsive: false
         });
         //scroll change navbar color
         $(document).ready(function () {
