--- a/toolkit.html
+++ b/toolkit.html
@@ -48,17 +48,26 @@
                 <li class="pure-menu-item"><a class="pure-menu-link toggle-drawer">Contact</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">FR</a></li>
+                <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
             </ul>
+        </div>
+    </div>
+    <!-- jumbotron -->
+    <div class="j1 img-j2">
+        <div class="text-block-1">
+            <h3 class="baby-blue">Innolab</h3>
+            <h1>Toolkit</h1>
+
         </div>
     </div>
 
     <!-- section 3: Toolkit-->
     <div class="pure-g section-3">
         <div class="pure-u-1 text-block-1">
-            <h4>Your innovation toolkit</h4>
-            <p>A currated collection of innovative applications that will help and guide you in your next forward thinking project.</p>
-            <hr style="width:240px">
+            <h4>Let your ideas flow.</h4>
+            <p>At the InnoLAB, we truly believe that every idea is worthwhile exploring. That is why we have currated a toolkit that will quickly enable you develop your ideas.</p>
+            <a class="button-simple-link toggle-drawer">Your idea is ready to build?</a>
         </div>
 
         <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
@@ -90,37 +99,27 @@
                 </div>
             </a>
         </div>
-        
+
         <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appWatson">
-                <div class="card-image img-watson"></div>
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appFluid">
+                <div class="card-image img-fluid"></div>
                 <div class="card-info">
-                    <div class="card-title">Watson</div>
-                    <div class="card-artist">Big Data Analytics</div>
+                    <div class="card-title">Fluid Surveys</div>
+                    <div class="card-artist">Survey Tool</div>
                 </div>
             </a>
         </div>
 
         <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appMarvel">
-                <div class="card-image img-marvel"></div>
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appCoggle">
+                <div class="card-image img-coggle-2"></div>
                 <div class="card-info">
-                    <div class="card-title">Marvel</div>
-                    <div class="card-artist">Protoyping and Mockups</div>
+                    <div class="card-title">Coggle</div>
+                    <div class="card-artist">Mind Mapping Tool</div>
                 </div>
             </a>
         </div>
 
-        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appPrezi">
-                <div class="card-image img-prezi"></div>
-                <div class="card-info">
-                    <div class="card-title">Prezi</div>
-                    <div class="card-artist">Awesome Presentations</div>
-                </div>
-            </a>
-        </div>
-        
 
     </div>
 
@@ -157,6 +156,7 @@
                     <p>IBM Watson is a technology platform that uses natural language processing and machine learning to reveal insights from large amounts of unstructured data</p>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
                     <p>Give it a try, see how far you can elevate your ideas!</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="http://www.ibm.com/support/en-us/?lnk=mmi" target="_blank">app's support page</a>.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
@@ -198,7 +198,49 @@
                     <p>The presentation software for when it matters.</p>
                     <p>Unlike static slides, Prezi combines motion, zoom, and spatial relationships to engage your audience and help them remember your message. 60Millionalready present better with Prezi.</p>
                     <p>Give it a try, see how you will wow your next audience!</p>
-                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="https://marvelapp.com/support/" target="_blank">app's support page</a>.</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="https://prezi.com/support/" target="_blank">app's support page</a>.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="pure-button" href="#!">Access app</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal App Fluid Surveys -->
+    <div class="modal fade" id="appFluid" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-app-card" role="document">
+            <div class="modal-content">
+                <div class="card-image img-fluid"></div>
+                <div class="modal-body">
+                    <h3>Fluid Surveys</h3>
+                    <h6>What is it and how can it help you?</h6>
+                    <p>Online & mobile surveys made easy. Collect the data you need to make smarter decisions.</p>
+                    <p>The easiest way to build, distribute & analyze online surveys, forms, questionnaires & polls. There’s nothing to download, no coding or programming knowledge required… just open your browser and go. The perfect solution for customer satisfaction, market research, academic research, employee evaluations, and more!</p>
+                    <p>Give it a try, get to know your audience.</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="http://help.fluidsurveys.com" target="_blank">app's support page</a>.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="pure-button" href="#!">Access app</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal App Coggle -->
+    <div class="modal fade" id="appCoggle" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-app-card" role="document">
+            <div class="modal-content">
+                <div class="card-image img-coggle"></div>
+                <div class="modal-body">
+                    <h3>Coggle</h3>
+                    <h6>What is it and how can it help you?</h6>
+                    <p>Produce beautiful notes, quickly and easily. Share them with friends and colleagues to enhance your ideas collaboratively.</p>
+                    <p>Coggle is an online tool for creating and sharing mindmaps. It works online in your browser: there's nothing to download or update. Simply log in to start mind-mapping now!</p>
+                    <p>Give it a try, unlease your creativity!</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="https://coggle.it" target="_blank">app's support page</a>.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
@@ -222,6 +264,7 @@
                 newLocation = this.href;
                 $('body').fadeOut(1000, newpage);
             });
+
             function newpage() {
                 window.location = newLocation;
             }
@@ -245,7 +288,7 @@
         //parallax effect
         $(window).stellar({
             horizontalScrolling: false,
-            responsive: true
+            responsive: false
         });
         //scroll change navbar color
         $(document).ready(function () {
