fixed minor link issue explore now button

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button onclick="window.location.href='/toolkit.html'" type="button" class="pure-button pure-button-primary">Explore now</button>
+                    <button onclick="window.location.href='toolkit.html'" type="button" class="pure-button pure-button-primary">Explore now</button>
                 </div>
             </div>
         </div>
