--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>InnoLAB 2.0 Toolkit</title>
+    <title>InnoLAB 2.0</title>
 
     <link rel="stylesheet" href="pure.css">
     <link rel="stylesheet" href="grids-responsive.css">
@@ -44,8 +44,8 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link">How it works</a></li>
-                <li class="pure-menu-item active"><a href="#!" class="pure-menu-link">Toolkit</a></li>
-                <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Toolkit</a></li>
+                <li class="pure-menu-item active"><a href="#!" class="pure-menu-link">Contact</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">FR</a></li>
@@ -53,80 +53,47 @@
             </ul>
         </div>
     </div>
+
     <!-- jumbotron -->
-    <div class="j1 img-j2">
+    <!--<div class="j1 img-j1" data-stellar-background-ratio="0.8" style="background-image:url('./images/phone1.jpg')">
         <div class="text-block-1">
-            <h3 class="baby-blue">Innolab</h3>
-            <h1>Toolkit</h1>
-
+            <h1>Contact.</h1>
+            <p class="white"></p>
         </div>
-    </div>
+    </div>-->
 
-    <!-- section 3: Toolkit-->
-    <div class="pure-g section-3">
-        <div class="pure-u-1 text-block-1">
-            <h4>Let your ideas flow.</h4>
-            <p>At the InnoLAB, we truly believe that every idea is worthwhile exploring. That is why we have currated a toolkit that will quickly enable you develop your ideas.</p>
-            <a class="button-simple-link toggle-drawer">Your idea is ready to build?</a>
-        </div>
+    <!-- section 1: 3 pillars-->
+    <div class="pure-g">
 
-        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appWatson">
-                <div class="card-image img-watson"></div>
-                <div class="card-info">
-                    <div class="card-title">Watson</div>
-                    <div class="card-artist">Big Data Analytics</div>
-                </div>
-            </a>
-        </div>
-
-        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appMarvel">
-                <div class="card-image img-marvel"></div>
-                <div class="card-info">
-                    <div class="card-title">Marvel</div>
-                    <div class="card-artist">Protoyping and Mockups</div>
-                </div>
-            </a>
-        </div>
-
-        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appPrezi">
-                <div class="card-image img-prezi"></div>
-                <div class="card-info">
-                    <div class="card-title">Prezi</div>
-                    <div class="card-artist">Awesome Presentations</div>
-                </div>
-            </a>
-        </div>
-
-        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appFluid">
-                <div class="card-image img-fluid"></div>
-                <div class="card-info">
-                    <div class="card-title">Fluid Surveys</div>
-                    <div class="card-artist">Survey Tool</div>
-                </div>
-            </a>
-        </div>
-
-        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appCoggle">
-                <div class="card-image img-coggle-2"></div>
-                <div class="card-info">
-                    <div class="card-title">Coggle</div>
-                    <div class="card-artist">Mind Mapping Tool</div>
-                </div>
-            </a>
-        </div>
-
+        <iframe src="https://docs.google.com/forms/d/1q3e2SsXQ5QMbMXZIMNSEPxR3JwnBP6JYNdhCeL00WI4/viewform?embedded=true" width="100%" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
     </div>
 
     <!-- footer -->
-    <div class="pure-g section-footer">
+    <!--<div class="pure-g section-footer">
         <div class="pure-u-1 text-center">
             © 2016 Made with <span class="footer-strikethrough">love</span> a keyboard by <a class="baby-blue" href="http://loogart.com" target="_blank">Chris Soueidan</a> of Global Affairs Canada (SIAI).
+        </div>
+    </div>-->
+
+    <!-- Modal Explore -->
+    <div class="modal fade" id="explore" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-black-card" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Explore</h4>
+                </div>
+                <div class="img-explore j1" style="height:350px"></div>
+                <div class="modal-body">
+                    <h5>You can create freely.</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                    <p>Give it a try, see how far you can elevate your ideas!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button onclick="window.location.href='toolkit.html'" type="button" class="pure-button pure-button-primary">Explore now</button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -160,7 +127,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
+                    <button type="button" class="pure-button" href="#!">Access app</button>
                 </div>
             </div>
         </div>
@@ -181,7 +148,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
+                    <button type="button" class="pure-button" href="#!">Access app</button>
                 </div>
             </div>
         </div>
@@ -202,49 +169,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal App Fluid Surveys -->
-    <div class="modal fade" id="appFluid" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-app-card" role="document">
-            <div class="modal-content">
-                <div class="card-image img-fluid"></div>
-                <div class="modal-body">
-                    <h3>Fluid Surveys</h3>
-                    <h6>What is it and how can it help you?</h6>
-                    <p>Online & mobile surveys made easy. Collect the data you need to make smarter decisions.</p>
-                    <p>The easiest way to build, distribute & analyze online surveys, forms, questionnaires & polls. There’s nothing to download, no coding or programming knowledge required… just open your browser and go. The perfect solution for customer satisfaction, market research, academic research, employee evaluations, and more!</p>
-                    <p>Give it a try, get to know your audience.</p>
-                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="http://help.fluidsurveys.com" target="_blank">app's support page</a>.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal App Coggle -->
-    <div class="modal fade" id="appCoggle" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-app-card" role="document">
-            <div class="modal-content">
-                <div class="card-image img-coggle"></div>
-                <div class="modal-body">
-                    <h3>Coggle</h3>
-                    <h6>What is it and how can it help you?</h6>
-                    <p>Produce beautiful notes, quickly and easily. Share them with friends and colleagues to enhance your ideas collaboratively.</p>
-                    <p>Coggle is an online tool for creating and sharing mindmaps. It works online in your browser: there's nothing to download or update. Simply log in to start mind-mapping now!</p>
-                    <p>Give it a try, unlease your creativity!</p>
-                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="https://coggle.it" target="_blank">app's support page</a>.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
+                    <button type="button" class="pure-button" href="#!">Access app</button>
                 </div>
             </div>
         </div>
