--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
             <div class="custom-menu-screen"></div>
             <ul class="pure-menu-list">
-                <li class="pure-menu-item active"><a href="index.html" class="pure-menu-link">Home</a></li>
+                <li class="pure-menu-item active"><a href="#!" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link">How it works</a></li>
                 <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Toolkit</a></li>
-                <li class="pure-menu-item"><a class="pure-menu-link toggle-drawer">Contact</a></li>
+                <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">FR</a></li>
@@ -206,7 +206,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="pure-button" href="#!">Access app</button>
+                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
                 </div>
             </div>
         </div>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="pure-button" href="#!">Access app</button>
+                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
                 </div>
             </div>
         </div>
@@ -248,7 +248,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="pure-button" href="#!">Access app</button>
+                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
                 </div>
             </div>
         </div>
