how it works page developed

--- a/toolkit.html
+++ b/toolkit.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="pure.css">
     <link rel="stylesheet" href="grids-responsive.css">
     <link rel="stylesheet" href="style.css">
-    <!--<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,800,400italic' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css" class="fontstack-asset">
     <style>
@@ -43,12 +42,12 @@
             <div class="custom-menu-screen"></div>
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">How it works</a></li>
+                <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
                 <li class="pure-menu-item active"><a href="#!" class="pure-menu-link">Toolkit</a></li>
                 <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">FR</a></li>
+                <li class="pure-menu-item"><a href="#!" class="pure-menu-link toggle-drawer">FR</a></li>
                 <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
             </ul>
         </div>
