--- a/how-it-works.html
+++ b/how-it-works.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>InnoLAB 2.0</title>
+    <title>InnoLAB 2.0 Toolkit</title>
 
     <link rel="stylesheet" href="pure.css">
     <link rel="stylesheet" href="grids-responsive.css">
@@ -41,8 +41,8 @@
         <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
             <div class="custom-menu-screen"></div>
             <ul class="pure-menu-list">
-                <li class="pure-menu-item active"><a href="#!" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
+                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
+                <li class="pure-menu-item active"><a href="#!" class="pure-menu-link">How it works</a></li>
                 <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Toolkit</a></li>
                 <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
             </ul>
@@ -52,126 +52,78 @@
             </ul>
         </div>
     </div>
-    
-        <!-- jumbotron -->
-        <div class="j1 img-j1" data-stellar-background-ratio="0.8" style="background-image:url('./images/phone1.jpg')">
-            <div class="text-block-1">
-                <h3 class="baby-blue">Innolab</h3>
-                <h1>Explore. Build. Publish.</h1>
-                <p class="white">Hello from the Global Affairs Canada InnoLAB! We are a dedicated (<span class="baby-blue">small</span>) team in the Global Affairs Information Management and Information Management Bureau, who have created the InnoLAB to help you foster digitally focused - innovative solutions that change the way our department works.</p>
-                <a href="toolkit.html" class="pure-button pure-button-blue button-xlarge" style="">Get started</a>
-            </div>
-</div>
-
-        <!-- section 1: 3 pillars-->
-        <div class="pure-g">
-
-        <div class="pure-u-1 pure-u-sm-1 pure-u-md-1-2">
-            <div class="album-art img-explore">
-                <h4 class="album-image-title">Explore</h4>
-                <div class="album-gradient"></div>
-                <div class="album-info">
-                    <a href="#!" class="btn btn-white-o pull-right"></a>
-                    <div class="album-title">
-                        <h1>Explore</h1></div>
-                    <h2 class="album-artist">Have an innovative idea? <br> Start exploring by using our Toolkit.</h2>
-                    <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#explore">About Exploring</a>
-                </div>
-            </div>
-        </div>
-        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4">
-            <div class="album-art img-build">
-                <h4 class="album-image-title">Build</h4>
-                <div class="album-gradient"></div>
-                <div class="album-info">
-                    <a href="#!" class="btn btn-white-o pull-right"></a>
-                    <div class="album-title">
-                        <h1>Build</h1></div>
-                    <h2 class="album-artist">Want to prototype that innovative idea? <br>Maybe we can help!</h2>
-                    <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#comingSoon">About Building</a>
-                </div>
-            </div>
-        </div>
-        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4">
-            <div class="album-art img-publish">
-                <h4 class="album-image-title">Publish</h4>
-                <div class="album-gradient"></div>
-                <div class="album-info">
-                    <div class="album-title">
-                        <h1>Publish</h1></div>
-                    <h2 class="album-artist">Think your prototype is department worthy?<br>Let’s publish it.</h2>
-                    <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#comingSoon">About Publishing</a>
-                </div>
-            </div>
+    <!-- jumbotron -->
+    <div class="j1 img-j3">
+        <div class="text-block-1">
+            <h3 class="baby-blue">Innolab</h3>
+            <h1>How it works</h1>
         </div>
     </div>
-    
-    <!-- section 2: Explain apps-->
-    <div class="pure-g section-2">
 
-        <div class="pure-u-1 text-block-1">
-            <h4>Let your ideas flow.</h4>
-            <p>At the InnoLAB, we truly believe that every idea is worthwhile exploring. That is why we have currated a toolkit that will quickly enable you develop your ideas.</p>
-            <a href="toolkit.html" class="button-simple-link">View all apps</a>
+    <!-- section 3: Toolkit-->
+    <div class="pure-g section-3">
+        <div class="pure-u-1 pure-u-md-1-2 text-block-2">
+            <!-- content here -->
+            <h4>1. Explore</h4>
+            <h6 class="baby-blue">A Self-Serve Hub</h6>
+            <p>A virtual “store-front” of user friendly tools where GAC employees can begin exploring a potential idea at their desk. The Self-Serve Hub will be located on the @International Wiki, and have links to available tools, including:</p>
+            <ul>
+                <li>Prototype Mockup tools</li>
+                <li>Data Visualization Tools</li>
+                <li>Mind Mapping</li>
+                <li>Evaluation/Analysis Tools</li>
+                <li>User requested applications</li>
+            </ul>
+            <a href="toolkit.html" class="pure-button pure-button-blue" style="">Get started</a>
+
+        </div>
+        <div class="pure-u-1 pure-u-md-1-2 text-block-2">
+            <!-- content here -->
+            <h4>2. Build</h4>
+            <h6 class="baby-blue">Incubate your Ideas</h6>
+            <p>SID will provide a team of Innovation Technicians for 2-4 weeks to develop a working prototype for deeper analysis. The Incubation team will:
+            </p>
+            <ul>
+                <li>Leverage advanced SID development tools to prototype concepts</li>
+                <li>Leveraging their own expertise and subject matter experts to further prototype a concept</li>
+                <li>Mind Mapping</li>
+                <li>Leverage for potential partnerships (SSC, private sector, other)</li>
+                <li>Assist in creating a successful analysis tool to evaluate the prototype</li>
+            </ul>
         </div>
 
-        <div class="pure-u-1 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appWatson">
-                <div class="card-image img-watson"></div>
-                <div class="card-info">
-                    <div class="card-title">Watson</div>
-                    <div class="card-artist">Big Data Analytics</div>
-                </div>
-            </a>
-        </div>
+        <div class="pure-u-1 pure-u-md-1-2 text-block-2">
+            <!-- content here -->
+            <h4>3. Publish</h4>
+            <h6 class="baby-blue">Get your project fast-tracked</h6>
+            <p>SID will maximize a fast-track delivery model to advance a functioning prototype to final product. The model would include:</p>
+            <ul>
+                <li>Providing client support for navigating development process</li>
+                <li>Leveraging a Streamlined development (bimodal 2) process</li>
+                <li>Utilize expertise from SID in product development lifecycle</li>
+            </ul>
+            <h6 class="baby-blue">Eligibility Criteria</h6>
+            <p>Your eligibility to publish your project with the Innolab will be based on the following <b>criteria</b>:</p>
+            <ol>
+                <li>Incubate to Fast-Track must be completed within 100 days</li>
+                <li>There are no risks to the GAC Network </li>
+                <li>There is an approach for addressing issues related to privacy </li>
+                <li>The total cost for development is less than <span class="baby-blue">$50,000 CDN</span></li>
+                <li>The client provides a minimum <span>20%</span> cost to Incubate/Develop the concept</li>
+                <li>SID will match financial contribution made by client </li>
+                <li>Client/SID may coordinate proposal for funds through the GAC Big Ideas Fund</li>
+                <li>The client must have a project champion at Director level and above</li>
 
-        <div class="pure-u-1 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appMarvel">
-                <div class="card-image img-marvel"></div>
-                <div class="card-info">
-                    <div class="card-title">Marvel</div>
-                    <div class="card-artist">Protoyping and Mockups</div>
-                </div>
-            </a>
-        </div>
-
-        <div class="pure-u-1 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appPrezi">
-                <div class="card-image img-prezi"></div>
-                <div class="card-info">
-                    <div class="card-title">Prezi</div>
-                    <div class="card-artist">Awesome Presentations</div>
-                </div>
-            </a>
+            </ol>
         </div>
 
     </div>
+
 
     <!-- footer -->
     <div class="pure-g section-footer">
         <div class="pure-u-1 text-center">
             © 2016 Made with <span class="footer-strikethrough">love</span> a keyboard by <a class="baby-blue" href="http://loogart.com" target="_blank">Chris Soueidan</a> of Global Affairs Canada (SIAI).
-        </div>
-    </div>
-
-    <!-- Modal Explore -->
-    <div class="modal fade" id="explore" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-black-card" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Explore</h4>
-                </div>
-                <div class="img-explore j1" style="height:350px"></div>
-                <div class="modal-body">
-                    <h5>You can create freely.</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-                    <p>Give it a try, see how far you can elevate your ideas!</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
-                    <button onclick="window.location.href='toolkit.html'" type="button" class="pure-button pure-button-primary">Explore now</button>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -253,6 +205,48 @@
         </div>
     </div>
 
+    <!-- Modal App Fluid Surveys -->
+    <div class="modal fade" id="appFluid" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-app-card" role="document">
+            <div class="modal-content">
+                <div class="card-image img-fluid"></div>
+                <div class="modal-body">
+                    <h3>Fluid Surveys</h3>
+                    <h6>What is it and how can it help you?</h6>
+                    <p>Online & mobile surveys made easy. Collect the data you need to make smarter decisions.</p>
+                    <p>The easiest way to build, distribute & analyze online surveys, forms, questionnaires & polls. There’s nothing to download, no coding or programming knowledge required… just open your browser and go. The perfect solution for customer satisfaction, market research, academic research, employee evaluations, and more!</p>
+                    <p>Give it a try, get to know your audience.</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="http://help.fluidsurveys.com" target="_blank">app's support page</a>.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal App Coggle -->
+    <div class="modal fade" id="appCoggle" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-app-card" role="document">
+            <div class="modal-content">
+                <div class="card-image img-coggle"></div>
+                <div class="modal-body">
+                    <h3>Coggle</h3>
+                    <h6>What is it and how can it help you?</h6>
+                    <p>Produce beautiful notes, quickly and easily. Share them with friends and colleagues to enhance your ideas collaboratively.</p>
+                    <p>Coggle is an online tool for creating and sharing mindmaps. It works online in your browser: there's nothing to download or update. Simply log in to start mind-mapping now!</p>
+                    <p>Give it a try, unlease your creativity!</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="https://coggle.it" target="_blank">app's support page</a>.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- All javascript below -->
     <script src="jquery.min.js"></script>
     <script src="modal.js"></script>
@@ -267,6 +261,7 @@
                 newLocation = this.href;
                 $('body').fadeOut(1000, newpage);
             });
+
             function newpage() {
                 window.location = newLocation;
             }
