complete draft 1 of innolab 2.0

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <a href="index.html" class="pure-menu-heading custom-menu-brand">
                 <span class="fip-navbar"></span>
             </a>
-            <a href="#" class="custom-menu-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
+            <a class="custom-menu-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
         </div>
         <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
             <div class="custom-menu-screen"></div>
