--- a/how-it-works.html
+++ b/how-it-works.html
@@ -36,7 +36,7 @@
             <a href="index.html" class="pure-menu-heading custom-menu-brand">
                 <span class="fip-navbar"></span>
             </a>
-            <a href="#" class="custom-menu-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
+            <a class="custom-menu-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
         </div>
         <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
             <div class="custom-menu-screen"></div>
@@ -62,11 +62,18 @@
 
     <!-- section 3: Toolkit-->
     <div class="pure-g section-3">
+       
+        <div class="pure-u-1 text-block-2">
+            <p>GAC employees often have many ideas which, using the right technology, could benefit the department in significant ways. Often times these ideas are never fully explored, primarily because employees do not have a means to expand on their ideas.</p>
+            <p>For IM/IT, all projects, big or small, run through the same intake process. As a result, smaller projects rarely come to fruition because of the demands of larger, more complex projects being supported. Projects deemed as disruptive, different or innovative rarely succeed in the SID Intake process because they do not appear to be as important as other, more streamlined proposals.</p>
+            <p>As a result, the department misses out on a significant amount of potential knowledge employees hold for enhancing core business lines. SID wants to maximize the knowledge of its departmental staff, no matter their location, by creating an environment for prototyping, incubating and deploying an innovative idea to product.</p>
+        </div>
+
         <div class="pure-u-1 pure-u-md-1-2 text-block-2">
             <!-- content here -->
             <h4>1. Explore</h4>
-            <h6 class="baby-blue">A Self-Serve Hub</h6>
-            <p>A virtual “store-front” of user friendly tools where GAC employees can begin exploring a potential idea at their desk. The Self-Serve Hub will be located on the @International Wiki, and have links to available tools, including:</p>
+            <h6 class="baby-blue">Develop your ideas with the best tools</h6>
+            <p class="margin-20-right">A virtual “store-front” of user friendly tools where GAC employees can begin exploring a potential idea at their desk. The Self-Serve Hub will be located on the @International Wiki, and have links to available tools, including:</p>
             <ul>
                 <li>Prototype Mockup tools</li>
                 <li>Data Visualization Tools</li>
@@ -75,13 +82,13 @@
                 <li>User requested applications</li>
             </ul>
             <a href="toolkit.html" class="pure-button pure-button-blue" style="">Get started</a>
-
         </div>
+        
         <div class="pure-u-1 pure-u-md-1-2 text-block-2">
             <!-- content here -->
-            <h4>2. Build</h4>
-            <h6 class="baby-blue">Incubate your Ideas</h6>
-            <p>SID will provide a team of Innovation Technicians for 2-4 weeks to develop a working prototype for deeper analysis. The Incubation team will:
+            <h4>2. Build (Coming Soon)</h4>
+            <h6 class="baby-blue">We will help you prototype your idea</h6>
+            <p class="margin-20-right">SID will provide a team of Innovation Technicians for 2-4 weeks to develop a working prototype for deeper analysis. The Incubation team will:
             </p>
             <ul>
                 <li>Leverage advanced SID development tools to prototype concepts</li>
@@ -94,16 +101,16 @@
 
         <div class="pure-u-1 pure-u-md-1-2 text-block-2">
             <!-- content here -->
-            <h4>3. Publish</h4>
-            <h6 class="baby-blue">Get your project fast-tracked</h6>
-            <p>SID will maximize a fast-track delivery model to advance a functioning prototype to final product. The model would include:</p>
+            <h4>3. Publish (Coming Soon)</h4>
+            <h6 class="baby-blue">We will publish your app for your users</h6>
+            <p class="margin-20-right">SID will maximize a fast-track delivery model to advance a functioning prototype to final product. The model would include:</p>
             <ul>
                 <li>Providing client support for navigating development process</li>
                 <li>Leveraging a Streamlined development (bimodal 2) process</li>
                 <li>Utilize expertise from SID in product development lifecycle</li>
             </ul>
-            <h6 class="baby-blue">Eligibility Criteria</h6>
-            <p>Your eligibility to publish your project with the Innolab will be based on the following <b>criteria</b>:</p>
+            <h6><b>Eligibility Criteria</b></h6>
+            <p class="margin-20-right">Your eligibility to publish your project with the Innolab will be based on the following <b>criteria</b>:</p>
             <ol>
                 <li>Incubate to Fast-Track must be completed within 100 days</li>
                 <li>There are no risks to the GAC Network </li>
@@ -113,7 +120,6 @@
                 <li>SID will match financial contribution made by client </li>
                 <li>Client/SID may coordinate proposal for funds through the GAC Big Ideas Fund</li>
                 <li>The client must have a project champion at Director level and above</li>
-
             </ol>
         </div>
 
