--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="index.html" class="pure-menu-heading custom-menu-brand">
                 <span class="fip-navbar"></span>
             </a>
-            <a href="#" class="custom-menu-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
+            <a class="custom-menu-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
         </div>
         <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
             <div class="custom-menu-screen"></div>
@@ -54,7 +54,7 @@
     </div>
     
         <!-- jumbotron -->
-        <div class="j1 img-j1" data-stellar-background-ratio="0.8" style="background-image:url('./images/phone1.jpg')">
+        <div class="j1 img-j1" data-stellar-background-ratio="0.8">
             <div class="text-block-1">
                 <h3 class="baby-blue">Innolab</h3>
                 <h1>Explore. Build. Publish.</h1>
