--- a/toolkit.html
+++ b/toolkit.html
@@ -36,7 +36,7 @@
             <a href="index.html" class="pure-menu-heading custom-menu-brand">
                 <span class="fip-navbar"></span>
             </a>
-            <a href="#" class="custom-menu-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
+            <a class="custom-menu-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
         </div>
         <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
             <div class="custom-menu-screen"></div>
@@ -66,7 +66,7 @@
         <div class="pure-u-1 text-block-1">
             <h4>Let your ideas flow.</h4>
             <p>At the InnoLAB, we truly believe that every idea is worthwhile exploring. That is why we have currated a toolkit that will quickly enable you develop your ideas.</p>
-            <a class="button-simple-link toggle-drawer">Your idea is ready to build?</a>
+            <a href="contact.html" class="button-simple-link">Your idea is ready to build?</a>
         </div>
 
         <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
