--- a/toolkit.html
+++ b/toolkit.html
@@ -118,6 +118,16 @@
                 </div>
             </a>
         </div>
+        
+        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appPlasticity">
+                <div class="card-image img-plasticity"></div>
+                <div class="card-info">
+                    <div class="card-title">Plasticity</div>
+                    <div class="card-artist">Happiness metrics</div>
+                </div>
+            </a>
+        </div>
 
 
     </div>
@@ -248,6 +258,27 @@
             </div>
         </div>
     </div>
+    
+    <!-- Modal App Plasticity -->
+    <div class="modal fade" id="appPlasticity" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-app-card" role="document">
+            <div class="modal-content">
+                <div class="card-image img-plasticity-2"></div>
+                <div class="modal-body">
+                    <h3>Plasticity</h3>
+                    <h6>What is it and how can it help you?</h6>
+                    <p>A scientific approach to employee engagement and company performance.</p>
+                    <p>Organizational, behaviorial and positive psycchology is built into every aspect of the Plasticity platform.</p>
+                    <p>Give it a try, become happier at work!</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="http://www.plasticitylabs.com" target="_blank">app's support page</a>.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="pure-button" onclick="window.location.href='contact.html'">Access app</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- All javascript below -->
     <script src="jquery.min.js"></script>
@@ -257,11 +288,11 @@
         //fade in effect
         $(document).ready(function () {
             $('body').css('display', 'none');
-            $('body').fadeIn(1000);
-            $('.link').click(function (event) {
+            $('body').fadeIn(500);
+            $('.pure-menu-link').click(function (event) {
                 event.preventDefault();
                 newLocation = this.href;
-                $('body').fadeOut(1000, newpage);
+                $('body').fadeOut(500, newpage);
             });
 
             function newpage() {
