updated content on website.

--- a/index.html
+++ b/index.html
@@ -43,28 +43,30 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item active"><a href="#!" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
-                <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Toolkit</a></li>
-                <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
+                <li class="pure-menu-item"><a href="build.html" class="pure-menu-link">Build</a></li>
+                <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
+                <li class="pure-menu-item"><a href="#!" class="pure-menu-link">Contact</a></li>
                 <li class="pure-menu-item"><a href="#!" class="pure-menu-link toggle-drawer">FR</a></li>
                 <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
             </ul>
         </div>
     </div>
-    
-        <!-- jumbotron -->
-        <div class="j1 img-j1" data-stellar-background-ratio="0.8">
-            <div class="text-block-1">
-                <h3 class="baby-blue">Innolab</h3>
-                <h1>Explore. Build. Publish.</h1>
-                <p class="white">Hello from the Global Affairs Canada InnoLAB! We are a dedicated (<span class="baby-blue">small</span>) team in the Global Affairs Information Management and Information Management Bureau, who have created the InnoLAB to help you foster digitally focused - innovative solutions that change the way our department works.</p>
-                <a href="toolkit.html" class="pure-button pure-button-blue button-xlarge" style="">Get started</a>
-            </div>
-</div>
 
-        <!-- section 1: 3 pillars-->
-        <div class="pure-g">
+    <!-- jumbotron -->
+    <div class="j1 img-j1" data-stellar-background-ratio="0.8">
+        <div class="text-block-1">
+            <h3 class="baby-blue">Innolab</h3>
+            <h1>Explore. Build. Publish.</h1>
+            <p class="white">Hello! We are a dedicated (<span class="baby-blue">small</span>) team in the Global Affairs Information Management and Information Management Bureau, who are pilot testing an InnoLAB to help Global Affairs Employees foster small-scale, technology centric solutions which change the way our department works.</p>
+            <a href="toolkit.html" class="pure-button pure-button-blue button-xlarge" style="">Get started</a>
+        </div>
+    </div>
+
+    <!-- section 1: 3 pillars-->
+    <div class="pure-g">
 
         <div class="pure-u-1 pure-u-sm-1 pure-u-md-1-2">
             <div class="album-art img-explore">
@@ -74,7 +76,7 @@
                     <a href="#!" class="btn btn-white-o pull-right"></a>
                     <div class="album-title">
                         <h1>Explore</h1></div>
-                    <h2 class="album-artist">Have an innovative idea? <br> Start exploring by using our Toolkit.</h2>
+                    <h2 class="album-artist">Have a digital innovative idea?<br>Start exploring our Toolkit.</h2>
                     <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#explore">About Exploring</a>
                 </div>
             </div>
@@ -87,32 +89,32 @@
                     <a href="#!" class="btn btn-white-o pull-right"></a>
                     <div class="album-title">
                         <h1>Build</h1></div>
-                    <h2 class="album-artist">Want to prototype that innovative idea? <br>Maybe we can help!</h2>
-                    <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#comingSoon">About Building</a>
+                    <h2 class="album-artist">Want to prototype an innovative idea?<br>Maybe we can help!</h2>
+                    <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#build">About Building</a>
                 </div>
             </div>
         </div>
         <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-4">
             <div class="album-art img-publish">
-                <h4 class="album-image-title">Publish</h4>
+                <h4 class="album-image-title">Share</h4>
                 <div class="album-gradient"></div>
                 <div class="album-info">
                     <div class="album-title">
-                        <h1>Publish</h1></div>
-                    <h2 class="album-artist">Think your prototype is department worthy?<br>Let’s publish it.</h2>
-                    <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#comingSoon">About Publishing</a>
+                        <h1>Share</h1></div>
+                    <h2 class="album-artist">Think your prototype is department worthy?<br>Let’s share it with others..</h2>
+                    <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#share">About Sharing</a>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <!-- section 2: Explain apps-->
     <div class="pure-g section-2">
 
         <div class="pure-u-1 text-block-1">
             <h4>Let your ideas flow.</h4>
-            <p>At the InnoLAB, we truly believe that every idea is worthwhile exploring. That is why we have currated a toolkit that will quickly enable you develop your ideas.</p>
-            <a href="toolkit.html" class="button-simple-link">View all apps</a>
+            <p>Our raison D'être is promoting digital innovation across Global Affairs Canada. If you see an opportunity to address a departmental challenge through technology, start here. The InnoLAB will let you explore and prototype digitally innovative concepts.</p>
+            <a href="how-it-works.html" class="button-simple-link">How it works</a>
         </div>
 
         <div class="pure-u-1 pure-u-md-1-3">
@@ -144,7 +146,9 @@
                 </div>
             </a>
         </div>
-
+        <div class="pure-u-1 text-center">
+            <a href="toolkit.html" class="button-simple-link">View all apps</a>
+        </div>
     </div>
 
     <!-- footer -->
@@ -161,15 +165,56 @@
                 <div class="modal-header">
                     <h4 class="modal-title" id="myModalLabel">Explore</h4>
                 </div>
-                <div class="img-explore j1" style="height:350px"></div>
+                <div class="img-explore j1" style="height:240px"></div>
                 <div class="modal-body">
                     <h5>You can create freely.</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                    <p>Access a series of tools to begin exploring digital innovation. We have tools for data analytics, mind mapping, surveys and more to come. Click Explore Now to learn about our Toolkit</p>
                     <p>Give it a try, see how far you can elevate your ideas!</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
                     <button onclick="window.location.href='toolkit.html'" type="button" class="pure-button pure-button-primary">Explore now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Build -->
+    <div class="modal fade" id="build" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-black-card" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Build</h4>
+                </div>
+                <div class="img-build j1" style="height:240px"></div>
+                <div class="modal-body">
+                    <h5>Bringing your idea to the next level</h5>
+                    <p>We can work with you to develop your innovative idea into a prototype. Click Build Now for to learn about our submission criteria.
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button onclick="window.location.href='build.html'" type="button" class="pure-button pure-button-primary">Build now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Share -->
+    <div class="modal fade" id="share" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-black-card" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Share</h4>
+                </div>
+                <div class="img-publish j1" style="height:240px"></div>
+                <div class="modal-body">
+                    <h5>Your Product.</h5>
+                    <p>Let’s turn your prototype it into a product. Click Share Now, to learn more about our process.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
+                    <button onclick="window.location.href='share.html'" type="button" class="pure-button pure-button-primary">Share now</button>
                 </div>
             </div>
         </div>
@@ -255,9 +300,18 @@
 
     <!-- All javascript below -->
     <script src="jquery.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="s.js"></script>
     <script src="modal.js"></script>
     <script src="stellar.js"></script>
+    <script>
+        // menu horizontal
+        (function (window, document) {
+            document.getElementById('toggle').addEventListener('click', function (e) {
+                document.getElementById('tuckedMenu').classList.toggle('custom-menu-tucked');
+                document.getElementById('toggle').classList.toggle('x');
+            });
+        })(this, this.document);
+    </script>
 
 </body>
 
