--- a/how-it-works.html
+++ b/how-it-works.html
@@ -42,11 +42,13 @@
             <div class="custom-menu-screen"></div>
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item active"><a href="#!" class="pure-menu-link">How it works</a></li>
-                <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Toolkit</a></li>
-                <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item active"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
+                <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
+                <li class="pure-menu-item"><a href="build.html" class="pure-menu-link">Build</a></li>
+                <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
+                <li class="pure-menu-item"><a href="#!" class="pure-menu-link">Contact</a></li>
                 <li class="pure-menu-item"><a href="#!" class="pure-menu-link toggle-drawer">FR</a></li>
                 <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
             </ul>
@@ -258,7 +260,15 @@
     <script src="scripts.js"></script>
     <script src="modal.js"></script>
     <script src="stellar.js"></script>
-    
+        <script>
+        // menu horizontal
+        (function (window, document) {
+            document.getElementById('toggle').addEventListener('click', function (e) {
+                document.getElementById('tuckedMenu').classList.toggle('custom-menu-tucked');
+                document.getElementById('toggle').classList.toggle('x');
+            });
+        })(this, this.document);
+    </script>
 </body>
 
 </html>
