--- a/share.html
+++ b/share.html
@@ -48,14 +48,14 @@
                 <li class="pure-menu-item active"><a href="share.html" class="pure-menu-link">Share</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
-                <li class="pure-menu-item"><a href="#!" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
                 <li class="pure-menu-item"><a href="#!" class="pure-menu-link toggle-drawer">FR</a></li>
                 <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
             </ul>
         </div>
     </div>
     <!-- jumbotron -->
-    <div class="j1 img-j2">
+    <div class="j1 img-j5">
         <div class="text-block-1">
             <h3 class="baby-blue">Innolab</h3>
             <h1>Share</h1>
