--- a/toolkit.html
+++ b/toolkit.html
@@ -48,7 +48,7 @@
                 <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
-                <li class="pure-menu-item"><a href="#!" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
                 <li class="pure-menu-item"><a href="#!" class="pure-menu-link toggle-drawer">FR</a></li>
                 <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
             </ul>
