--- a/how-it-works.html
+++ b/how-it-works.html
@@ -48,7 +48,7 @@
                 <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
-                <li class="pure-menu-item"><a href="#!" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
                 <li class="pure-menu-item"><a href="#!" class="pure-menu-link toggle-drawer">FR</a></li>
                 <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
             </ul>
@@ -65,64 +65,41 @@
     <!-- section 3: Toolkit-->
     <div class="pure-g section-3">
 
-        <div class="pure-u-1 text-block-2">
+        <div class="pure-u-1 text-block-3">
             <p>GAC employees often have many ideas which, using the right technology, could benefit the department in significant ways. Often times these ideas are never fully explored, primarily because employees do not have a means to expand on their ideas.</p>
             <p>For IM/IT, all projects, big or small, run through the same intake process. As a result, smaller projects rarely come to fruition because of the demands of larger, more complex projects being supported. Projects deemed as disruptive, different or innovative rarely succeed in the SID Intake process because they do not appear to be as important as other, more streamlined proposals.</p>
             <p>As a result, the department misses out on a significant amount of potential knowledge employees hold for enhancing core business lines. SID wants to maximize the knowledge of its departmental staff, no matter their location, by creating an environment for prototyping, incubating and deploying an innovative idea to product.</p>
         </div>
 
-        <div class="pure-u-1 pure-u-md-1-2 text-block-2">
+        <div class="pure-u-1 text-block-3">
             <!-- content here -->
-            <h4>1. Explore</h4>
-            <h6 class="baby-blue">Develop your ideas with the best tools</h6>
-            <p class="margin-20-right">A virtual “store-front” of user friendly tools where GAC employees can begin exploring a potential idea at their desk. The Self-Serve Hub will be located on the @International Wiki, and have links to available tools, including:</p>
-            <ul>
-                <li>Prototype Mockup tools</li>
-                <li>Data Visualization Tools</li>
-                <li>Mind Mapping</li>
-                <li>Evaluation/Analysis Tools</li>
-                <li>User requested applications</li>
-            </ul>
-            <a href="toolkit.html" class="pure-button pure-button-blue" style="">Get started</a>
+            <h6 class="baby-blue">Explore</h6>
+            <p class="margin-20-right">A virtual “store-front” of user friendly tools where GAC employees can begin exploring a potential idea at their desk. The Self-Serve Hub will be located on the @International Wiki, and have links to available tools, including: Prototype Mockup tools, Data Visualization Tools, Mind Mapping, Evaluation/Analysis Tools and User requested applications.</p>
         </div>
 
-        <div class="pure-u-1 pure-u-md-1-2 text-block-2">
+        <div class="pure-u-1 text-block-3">
             <!-- content here -->
-            <h4>2. Build (Coming Soon)</h4>
-            <h6 class="baby-blue">We will help you prototype your idea</h6>
+            <h6 class="baby-blue">Build</h6>
             <p class="margin-20-right">SID will provide a team of Innovation Technicians for 2-4 weeks to develop a working prototype for deeper analysis. The Incubation team will:
             </p>
             <ul>
                 <li>Leverage advanced SID development tools to prototype concepts</li>
-                <li>Leveraging their own expertise and subject matter experts to further prototype a concept</li>
-                <li>Mind Mapping</li>
+                <li>Leverage their own expertise and subject matter experts to further prototype a concept</li>
+                <li>Provide Mind Mapping assistance</li>
                 <li>Leverage for potential partnerships (SSC, private sector, other)</li>
                 <li>Assist in creating a successful analysis tool to evaluate the prototype</li>
             </ul>
         </div>
 
-        <div class="pure-u-1 pure-u-md-1-2 text-block-2">
+        <div class="pure-u-1 text-block-3">
             <!-- content here -->
-            <h4>3. Publish (Coming Soon)</h4>
-            <h6 class="baby-blue">We will publish your app for your users</h6>
+            <h6 class="baby-blue">Share</h6>
             <p class="margin-20-right">SID will maximize a fast-track delivery model to advance a functioning prototype to final product. The model would include:</p>
             <ul>
                 <li>Providing client support for navigating development process</li>
                 <li>Leveraging a Streamlined development (bimodal 2) process</li>
                 <li>Utilize expertise from SID in product development lifecycle</li>
             </ul>
-            <h6><b>Eligibility Criteria</b></h6>
-            <p class="margin-20-right">Your eligibility to publish your project with the Innolab will be based on the following <b>criteria</b>:</p>
-            <ol>
-                <li>Incubate to Fast-Track must be completed within 100 days</li>
-                <li>There are no risks to the GAC Network </li>
-                <li>There is an approach for addressing issues related to privacy </li>
-                <li>The total cost for development is less than <span class="baby-blue">$50,000 CDN</span></li>
-                <li>The client provides a minimum <span>20%</span> cost to Incubate/Develop the concept</li>
-                <li>SID will match financial contribution made by client </li>
-                <li>Client/SID may coordinate proposal for funds through the GAC Big Ideas Fund</li>
-                <li>The client must have a project champion at Director level and above</li>
-            </ol>
         </div>
 
     </div>
@@ -260,7 +237,7 @@
     <script src="scripts.js"></script>
     <script src="modal.js"></script>
     <script src="stellar.js"></script>
-        <script>
+    <script>
         // menu horizontal
         (function (window, document) {
             document.getElementById('toggle').addEventListener('click', function (e) {
