--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
             <div class="custom-menu-screen"></div>
             <ul class="pure-menu-list">
-                <li class="pure-menu-item active"><a href="#!" class="pure-menu-link">Home</a></li>
+                <li class="pure-menu-item active"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
                 <li class="pure-menu-item"><a href="toolkit.html" class="pure-menu-link">Explore</a></li>
                 <li class="pure-menu-item"><a href="build.html" class="pure-menu-link">Build</a></li>
                 <li class="pure-menu-item"><a href="share.html" class="pure-menu-link">Share</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
-                <li class="pure-menu-item"><a href="#!" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
                 <li class="pure-menu-item"><a href="#!" class="pure-menu-link toggle-drawer">FR</a></li>
                 <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
             </ul>
@@ -61,7 +61,7 @@
             <h3 class="baby-blue">Innolab</h3>
             <h1>Explore. Build. Publish.</h1>
             <p class="white">Hello! We are a dedicated (<span class="baby-blue">small</span>) team in the Global Affairs Information Management and Information Management Bureau, who are pilot testing an InnoLAB to help Global Affairs Employees foster small-scale, technology centric solutions which change the way our department works.</p>
-            <a href="toolkit.html" class="pure-button pure-button-blue button-xlarge" style="">Get started</a>
+            <a href="toolkit.html" class="pure-button pure-button-blue button-xlarge link">Get started</a>
         </div>
     </div>
 
@@ -105,6 +105,7 @@
                     <a class="pure-button pure-button-white-o" data-toggle="modal" data-target="#share">About Sharing</a>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 
@@ -300,7 +301,7 @@
 
     <!-- All javascript below -->
     <script src="jquery.min.js"></script>
-    <script src="s.js"></script>
+    <script src="scripts.js"></script>
     <script src="modal.js"></script>
     <script src="stellar.js"></script>
     <script>
@@ -311,6 +312,11 @@
                 document.getElementById('toggle').classList.toggle('x');
             });
         })(this, this.document);
+        //parallax effect
+        $(window).stellar({
+            horizontalScrolling: false,
+            responsive: false
+        });
     </script>
 
 </body>
