updated content and how it works design

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -49,7 +49,6 @@
             </ul>
             <ul class="pure-menu-list align-right">
                 <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
-                <li class="pure-menu-item"><a href="#!" class="pure-menu-link toggle-drawer">FR</a></li>
                 <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
             </ul>
         </div>
@@ -62,15 +61,49 @@
         </div>
     </div>
 
+
     <!-- section 3: Toolkit-->
-    <div class="pure-g section-3">
+    <!--<div class="pure-g section-3">
 
         <div class="pure-u-1 text-block-3">
-            <p>GAC employees often have many ideas which, using the right technology, could benefit the department in significant ways. Often times these ideas are never fully explored, primarily because employees do not have a means to expand on their ideas.</p>
+            <h4>Innovation-driven.</h4>
+
+            <p>Global Affairs Canada employees often have many ideas which, using the right technology, could benefit the department in significant ways. Often times these ideas are never fully explored, primarily because employees do not have a means to expand on their ideas.</p>
             <p>For IM/IT, all projects, big or small, run through the same intake process. As a result, smaller projects rarely come to fruition because of the demands of larger, more complex projects being supported. Projects deemed as disruptive, different or innovative rarely succeed in the SID Intake process because they do not appear to be as important as other, more streamlined proposals.</p>
             <p>As a result, the department misses out on a significant amount of potential knowledge employees hold for enhancing core business lines. SID wants to maximize the knowledge of its departmental staff, no matter their location, by creating an environment for prototyping, incubating and deploying an innovative idea to product.</p>
         </div>
 
+        <div class="pure-u-1 text-block-3">
+            <hr class="subtle">
+        </div>
+
+    </div>-->
+
+    <div class="pure-g section-3">
+
+        <div class="pure-u-1 text-block-1 text-center">
+            <h6 class="baby-blue">Step by step.</h6>
+            <h4>One simple process.</h4>
+            <p class="margin-20-right">All it takes to start is your idea and some exploration with our toolkit. Take a look at the illustration below to quickly understand how you can make a difference by bringing your idea into an environment for prototyping, incubating and deplyoying it into an innovative product. </p>
+        </div>
+    </div>
+
+
+    <!-- how it works graphic-->
+    <div class="pure-g">
+        <div class="pure-u-1 pure-u-md-1-3">
+            <div class="j1" style="background-image:url('./images/steps_explore.jpg');height:500px;background-position:50% 0;"></div>
+        </div>
+        <div class="pure-u-1 pure-u-md-1-3">
+            <div class="j1" style="background-image:url('./images/steps_build.jpg');height:500px;background-position:50% 0;"></div>
+        </div>
+        <div class="pure-u-1 pure-u-md-1-3">
+            <div class="j1" style="background-image:url('./images/steps_share.jpg');height:500px;background-position:50% 0;"></div>
+        </div>
+    </div>
+
+    <!-- content-->
+    <div class="pure-g section-3">
         <div class="pure-u-1 text-block-3">
             <!-- content here -->
             <h6 class="baby-blue">Explore</h6>
@@ -100,6 +133,10 @@
                 <li>Leveraging a Streamlined development (bimodal 2) process</li>
                 <li>Utilize expertise from SID in product development lifecycle</li>
             </ul>
+        </div>
+
+        <div class="pure-u-1 text-block-3">
+            <hr class="subtle">
         </div>
 
     </div>
